[gd_scene load_steps=4 format=3 uid="uid://dhue325kptsgh"]

[ext_resource type="Material" uid="uid://fja5trodvii5" path="res://assets/materials/crystal_mat.tres" id="1_mdnd4"]
[ext_resource type="Script" path="res://entities/crystal_pillar.gd" id="1_w4asc"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1i4rp"]
height = 1.6
radius = 0.6

[node name="CrystalPillar" type="Node3D"]
script = ExtResource("1_w4asc")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
radius = 0.6
height = 1.6
sides = 6
smooth_faces = false
material = ExtResource("1_mdnd4")

[node name="HitBox" type="Area3D" parent="." groups=["breakable"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CylinderShape3D_1i4rp")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="DropSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0)

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
